content/docs/v2020.10.30/reference/google.kubeform.com/StorageBucketObject.md
---
title: StorageBucketObject
menu:
  docs_v2020.10.30:
    identifier: storagebucketobject-google.kubeform.com
    name: StorageBucketObject
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## StorageBucketObject
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `StorageBucketObject` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[StorageBucketObjectSpec](#storagebucketobjectspec)***||
| `status` | ***[StorageBucketObjectStatus](#storagebucketobjectstatus)***||
## Phase(`string` alias)

Appears on:[StorageBucketObjectStatus](#storagebucketobjectstatus)

## StorageBucketObjectSpec

Appears on:[StorageBucketObject](#storagebucketobject), [StorageBucketObjectStatus](#storagebucketobjectstatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `secretRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `bucket` | ***string***||
| `cacheControl` | ***string***| ***(Optional)*** |
| `contentDisposition` | ***string***| ***(Optional)*** |
| `contentEncoding` | ***string***| ***(Optional)*** |
| `contentLanguage` | ***string***| ***(Optional)*** |
| `contentType` | ***string***| ***(Optional)*** |
| `crc32c` | ***string***| ***(Optional)*** |
| `detectMd5hash` | ***string***| ***(Optional)*** |
| `md5hash` | ***string***| ***(Optional)*** |
| `name` | ***string***||
| `outputName` | ***string***| ***(Optional)*** |
| `selfLink` | ***string***| ***(Optional)*** |
| `source` | ***string***| ***(Optional)*** |
| `storageClass` | ***string***| ***(Optional)*** |
## StorageBucketObjectStatus

Appears on:[StorageBucketObject](#storagebucketobject)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[StorageBucketObjectSpec](#storagebucketobjectspec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
---
## Sensitive Values
| Name | Type | Description |
|------|------|-------------|
| `content` | ***string*** ||
